--- a/src/styles.css
+++ b/src/styles.css
@@ -101,7 +101,7 @@ p4{
     width: 200px;
     height: 55px;
     border-radius: 30px;
-    background-color: white;
+    background-color: coral;
     text-align: center;
     font-weight: 300;
     padding-top: 5px;
